# israel-homicides

./: .code_review_sonnet.md  .codex_gnews_decoder_v3.md  .codex_incident_type_design.codex_v2.md  .codex_models_patch.codex_v2.md  .codex_prompts_patch.codex_v2.md  .codex_relevance_patch.codex_v2.md  .codex_test_cases.codex_v2.md  .discover_codex.md  .discover_gemini.md  .discover_sonnet.md  .env.example  .gemini_discover_research.md  .gitignore  .r001_codex.md  .r002_gemini.md  CLAUDE.md  LICENSE  README.md  _filter_drops.txt  codex_research.md  pyproject.toml  r001_codex.md  r002_codex.md
.claude-octopus/: state.json.backup  state.json.corrupt.1778386901
crime_pipeline/: __init__.py  __main__.py  config.py  diagnostics.py  models.py  pipeline.py  source_relevance.py  verification.py
data/: city_polygons.json  gazetteer.json  name_dictionary.json  truth_arab_society_2026_january.jsonl  truth_arraba_2026.jsonl
scripts/: add_missing_gazetteer.py  auto_merge_clear_duplicates.py  backfill_media_cache.py  build_validated_2026.py  bulk_reextract_rollups.py  debug_bakr_media.py  debug_ynet.py  decontaminate_clusters.py  demo_fetch.py  demo_media_real.py  demo_narrate_media_one.py  export_static_data.py  fetch_city_polygons.py  find_suspect_duplicates.py  funnel_arab48_2021.py  funnel_arab48_2022.py  funnel_arab48_2023.py  funnel_arab48_2024.py  funnel_arab48_2025.py  generate_missing_narrations.py  ingest_sources.py  insert_ghalib_balqis.py  null_raw_html.py  populate_gazetteer_coords.py  preview_arab48_localities_2021.py  preview_arab48_localities_2022.py  (+19 more)
(+1027 files in other folders)
