[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crime-pipeline"
version = "0.1.0"
description = "Multi-source Arabic/Hebrew crime news scraping and AI extraction pipeline"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.5",
    "httpx[http2]",
    "playwright",
    "beautifulsoup4",
    "lxml",
    "trafilatura",
    "sentence-transformers",
    "duckdb",
    "sqlalchemy",
    "alembic",
    "jellyfish",
    "anyascii",
    "langdetect",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jsonschema",
    "python-dotenv",
    "click",
    "tenacity",
    "structlog",
]

[project.scripts]
crime-pipeline = "crime_pipeline.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["crime_pipeline"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
